--- a/README
+++ b/README
@@ -8,7 +8,7 @@ This is GNU Libtool, a generic library support script.  Libtool hides
 the complexity of using shared libraries behind a consistent, portable
 interface.
 
-To use libtool, add the new generic library building commands to your
+To use Libtool, add the new generic library building commands to your
 Makefile, Makefile.in, or Makefile.am.  See the documentation for
 details.
 
@@ -16,19 +16,20 @@ Libtool's home page is:
 
   http://www.gnu.org/software/libtool/libtool.html
 
-See the file NEWS for a description of recent changes to libtool.
+See the file NEWS for a description of recent changes to Libtool.
 
-See the file INSTALL for instructions on how to build and install
-libtool.
+See the file INSTALL for generic instructions on how to build and install
+Libtool.  Please see the file doc/notes.txt for some platform-specific
+information.  Please note that you need GNU make to build Libtool.
 
 See the info node (libtool)Tested Platforms. (or the file
-doc/PLATFORMS) for a list of platforms that libtool supports.
+doc/PLATFORMS) for a list of platforms that Libtool supports.
 
 
 2. Reporting Bugs
 =================
 
-If you have any suggestions or bug reports, or you wish to port libtool
+If you have any suggestions or bug reports, or you wish to port Libtool
 to a new platform, please send electronic mail to the libtool mailing
 list <libtool@gnu.org> or bug reports to <bug-libtool@gnu.org>.  Be sure
 to send us your information from the end of the help message given by
@@ -39,10 +40,18 @@ to send us your information from the end of the help message given by
 ==================
 
 Libtool comes with two integrated sets of tests to check that your build
-is sane.  You can run both test suites like this:
+is sane.  You can run both test suites like this, assuming that `gmake'
+refers to GNU make:
 
-  make check TESTSUITEFLAGS=-V
-  make check-local
+  gmake -k check
+
+If you want to run the old testsuite only, do it like this:
+
+  gmake check TESTSUITEFLAGS=-V
+
+If you want to run the new testsuite only, do it like this:
+
+  gmake check-local
 
 The tests of the old test suite run in groups in the various demo
 subdirectories, so if one of the tests early in a group FAILs, the rest
@@ -55,8 +64,9 @@ To run a test group of the old test suite in isolation (say, you think
 you have fixed a bug, but don't want to rerun the entire suite), you can
 do it like this:
 
-  make check TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test' \
-	     TESTSUITEFLAGS=-V
+  gmake check TESTS="tests/cdemo-static.test tests/cdemo-make.test \
+                     tests/cdemo-exec.test" \
+              TESTSUITEFLAGS=-V
 
 Providing that you have a FAIL from the most recent group from a
 particular demo directory (like the cdemo-static.test group above), you
@@ -69,8 +79,8 @@ report mailing list, <bug-libtool@gnu.org> with a subject line that
 includes the string `[TEST FAILURE]'.  From a Bourne compatible shell,
 you can generate verbose test output like this:
 
-  VERBOSE=yes make check \
-  TESTS='cdemo-static.test cdemo-make.test cdemo-exec.test' \
+  VERBOSE=yes gmake check \
+  TESTS="tests/cdemo-static.test tests/cdemo-make.test tests/cdemo-exec.test" \
   TESTSUITEFLAGS=-V | tee cdemo-static-group.log
 
 In order to enable debug shell tracing, use VERBOSE=debug instead of
@@ -84,7 +94,7 @@ Autotest-driven testsuite.  Its usage is documented in
 
 but simple help may also be obtained through
 
-  make check-local TESTSUITEFLAGS='--help'
+  gmake check-local TESTSUITEFLAGS='--help'
 
 For verbose output, add the flag `-v', for running only a subset of the
 independent tests, merely specify them by number or by keyword, both of
