--- a/HACKING
+++ b/HACKING
@@ -635,10 +635,10 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 General Public License for more details.
 
 You should have received a copy of the GNU General Public License
-along with GNU Libtool; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-02110-1301  USA
-
+along with this program; if not, a copy can be downloaded from
+http://www.gnu.org/copyleft/gpl.html, or by writing to the Free
+Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+MA 02110-1301, USA.
 
 Local Variables:
 mode: text
