--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-2007-02-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+2007-02-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: Rewrite all news since 1.9f and put in categories,
+	update.
 
 	* libltdl/Makefile.inc: Fix the file description, so that it
 	matches recursive and nonrecursive libltdl setup.
@@ -29,7 +32,7 @@
 	tests/pdemo/Makefile.am, tests/tagdemo/Makefile.am: Update
 	Copyright notice text to include URL for canonical GPL document.
 
- 2007-02-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+2007-02-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/static.at: Forgot to fix PATH for the first
 	func_test_exec invocation.  So factor out into new functions
