--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/export.at: For const data object imported from shared
+	library, define appropriate macros to expand
+	__declspec(dllimport) on w32.  Fixes test failure on MinGW.
+
 2007-03-05  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.m4sh (func_check_macros): Display m4 quotes correctly
