--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/stresstest.at: For const data object imported from
+	shared library, define appropriate macros to expand
+	__declspec(dllimport) on w32.  Use two different main objects
+	and pick the right one for the link flags we are about to test.
+	Fixes test failure on MinGW.
+
 	* tests/export.at: For const data object imported from shared
 	library, define appropriate macros to expand
 	__declspec(dllimport) on w32.  Fixes test failure on MinGW.
