--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/config/ltmain.m4sh (func_mode_link): Also apply the
+	symbol filtering for w32 and the include_expsyms feature in the
+	case of exceeded command line length.  Fixes test failure on
+	MinGW.
+
 	* tests/stresstest.at: For const data object imported from
 	shared library, define appropriate macros to expand
 	__declspec(dllimport) on w32.  Use two different main objects
