--- a/THANKS
+++ b/THANKS
@@ -113,6 +113,7 @@
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Stephan Kulow			coolo@kde.org
+  Steve Ellcey			sje@cup.hp.com
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
   Sven Verdoolaege		skimo@liacs.nl
   Terry D. Dontje		Terry.Dontje@Sun.COM
