* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER) (_LT_CHECK_MAGIC_METHOD, _LT_COMPILER_PIC, _LT_LINKER_SHLIBS) (_LT_LANG_CXX_CONFIG, _LT_SYS_HIDDEN_LIBDEPS) [ interix ]: When matching for interix, accept version range [3-9] instead of 3. * NEWS: Update. Report by Martin Koeppe <mkoeppe@gmx.de>.

--- a/NEWS
+++ b/NEWS
@@ -76,7 +76,7 @@ New in 2.1a: 2007-??-??; CVS version 2.1a, Libtool team:
   - Basic support for PIE (position-independent executables).
   - Support for DragonFly BSD, improved support for FreeBSD.
   - Improved support for GNU/kFreeBSD and GNU/NetBSD.
-  - Support for Interix 3 (Windows SFU).
+  - Support for Interix 3 (Windows SFU) and newer versions.
   - Improved support for UnixWare.
   - Initial support for RDOS.
   - Initial Support for FC (modern Fortran).
