--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-03-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER)
+	(_LT_CHECK_MAGIC_METHOD, _LT_COMPILER_PIC, _LT_LINKER_SHLIBS)
+	(_LT_LANG_CXX_CONFIG, _LT_SYS_HIDDEN_LIBDEPS) [ interix ]: When
+	matching for interix, accept version range [3-9] instead of 3.
+	* NEWS: Update.
+	Report by Martin Koeppe <mkoeppe@gmx.de>.
+
 	* libltdl/m4/libtool.m4 (LT_PROG_GCJ): Avoid M4 expansion error
 	that caused `dnl' to be merged to the previous word.
 	* THANKS: Update.
