--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.5.23c: 2007-??-??; CVS version 1.5.23c, Libtool team:
+* Initial support for Interix newer than version 3.
 * Bug Fixes.
 
 New in 1.5.23b: 2007-02-17; CVS version 1.5.23a, Libtool team:
