--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/mdemo/Makefile.am (libmlib_la_LDFLAGS): Add
+	`-export-symbols-regex ".*"' because the convenience libltdl
+	uses export markers and thus turns off autoexport on w32.  Fixes
+	test failures for Cygwin and MinGW.
+	Bug analysis by Charles Wilson.
+
 	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER)
 	(_LT_CHECK_MAGIC_METHOD, _LT_COMPILER_PIC, _LT_LINKER_SHLIBS)
 	(_LT_LANG_CXX_CONFIG, _LT_SYS_HIDDEN_LIBDEPS) [ interix ]: When
