--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* mdemo/Makefile.am (libmlib_la_LDFLAGS): Add
+	`-export-symbols-regex ".*"' because the convenience libltdl
+	uses export markers and thus turns off autoexport on w32.  Fixes
+	test failures for Cygwin and MinGW.
+	Bug analysis by Charles Wilson.
+
 	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER)
 	(AC_DEPLIBS_CHECK_METHOD, _LT_AC_LANG_CXX_CONFIG)
 	(AC_LIBTOOL_POSTDEP_PREDEP, AC_LIBTOOL_PROG_COMPILER_PIC)
