--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-30   Matthieu Herrb  <matthieu.herrb@laas.fr>
+
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[ openbsd ]: Add an explicit check for shared libraries support.
+
 2007-03-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* Makefile.am ($(srcdir)/$(m4dir)/ltversion.m4): Fix quoting
