--- a/THANKS
+++ b/THANKS
@@ -112,6 +112,7 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
+  Simon Josefsson		jas@extundo.com
   Stephan Kulow			coolo@kde.org
   Steve Ellcey			sje@cup.hp.com
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
