--- a/THANKS
+++ b/THANKS
@@ -112,7 +112,9 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
+  Simon Josefsson		jas@extundo.com
   Stephan Kulow			coolo@kde.org
+  Steve Ellcey			sje@cup.hp.com
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
   Sven Verdoolaege		skimo@liacs.nl
   Terry D. Dontje		Terry.Dontje@Sun.COM
