--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (execute mode): Do not unset locale variables that
+	have not been set previously.  Do not use uninitialized
+	$lt_unset.  Report by <deckrider@gmail.com>.
+
 2007-04-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Link mode) <-no-install>: Mention that this
