--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/ltmain.m4sh (func_mode_link) <-no-install>
+	[ darwin ]: Treat like `-no-fast-install', as we cannot
+	hardcode.  Report by Simon Josefsson.
+
 2007-04-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Link mode) <-no-install>: Mention that this
