--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ New in 1.5.23c: 2007-??-??; CVS version 1.5.23c, Libtool team:
 * Bug Fixes.
 
 New in 1.5.23b: 2007-02-17; CVS version 1.5.23a, Libtool team:
+* New link flag `-static-libtool-libs' to provide the semantics that
+  `-static' had between 1.5 and before 1.5.22.
 * Initial support for RDOS.
 * Fix regression on DragonFly that disabled library hardcoding.
 * Fix regression on OpenBSD, NetBSD, DragonFly, and other systems
