--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-04-25  Charles Wilson  <libtool@cwilson.fastmail.fm>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/argz_.h: ensure error_t definition is obtained
+	in same mechanism system argz.h would have.
+	* libltdl/libltdl/lt__glibc.h: also detect if
+	SYSTEM_ARGZ_IS_BROKEN when determining whether to re#def
+	argz* functions.
+	* libltdl/m4/argz.m4 (gl_FUNC_ARGZ): add new test to check
+	if $host's argz facilities are known bad.  Err on the side
+	of caution if cross-compiling.
+
 2007-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* README, README.alpha: Document how to test an arbitrary
