--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-04-27  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	* libltdl/libltdl/lt__glibc.h: Use !HAVE_WORKING_ARGZ
+	instead of SYSTEM_ARGZ_IS_BROKEN.
+	* libltdl/m4/argz.m4 (gl_FUNC_ARGZ): Ditto.  Also, minor
+	stylistic improvements.
+	Report by Bruno Haible <bruno@clisp.org>.
+
 2007-04-25  Charles Wilson  <libtool@cwilson.fastmail.fm>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
